Remove overflow in Auto style, deprecate Fixed style (make it same as Auto for compatibility)

--- a/R7.MiniGallery/css/style-auto.css
+++ b/R7.MiniGallery/css/style-auto.css
@@ -1,7 +1,4 @@
 ﻿.MG_List.MG_Auto {
-    overflow:auto;
-    overflow-x:hidden;
-    overflow-y:auto
 }
 
 .MG_Auto .MG_Item, 
